update all pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,143 +1,299 @@
 <!doctype html>
 <html lang="en">
-  <head>
-      <title>Data Snap Solutions</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-    /* Banner styling */
-    .about-banner {
-      background: url("https://guardiansgroup.in/assets/images/serviece/office-support.jpg") no-repeat center center/cover;
-      height: 250px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-      position: relative;
-       
-    }
-    .about-banner::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.5);
-    }
-    .about-banner h1 {
-      position: relative;
-      z-index: 1;
-    }
-    /* Section headings */
-    h3 {
-      font-weight: bold;
-      margin-bottom: 15px;
-      color: #001BB7;
-    }
-    p {
-      text-align: justify;
-    }
-  </style>
+<head>
+  <title>Data Snap Solutions - About Us</title>
+  <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  </head>
-  <body>
-    <div id="navbar"></div>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
- <!-- Main Content -->
+  <link rel="stylesheet" href="/css/about.css">
+</head>
 
- <div class="about-banner">
-  About Us
- </div>
-  <div class="container py-5">
+<body>
+  <div id="navbar"></div>
 
-    <!-- Company Overview -->
-    <div class="row align-items-center mb-5">
-      <div class="col-md-7">
-        <h3>COMPANY OVERVIEW</h3>
-        <p><strong>Make Informed Decisions through Reliable, High-quality, and Well-founded Data</strong></p>
-        <p>Data Snap Solutions Inc., Data solution provider, headquartered in Willington, Delaware. 
-          We assist companies to achieve a profitable growth and being a backbone in providing 
-          the world’s most comprehensive B2B database.</p>
-        <p>We work with numerous clients from various businesses regardless of the size by offering 
-          them comprehensive, next-generation data solutions, from start to finish, through 
-          cutting-edge business models. In quest to take your data-driven approaches to a higher 
-          level, we have created our newest business archetypes and innovative data solutions, 
-          exclusively for B2B markets, tailor-made to your business necessities.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="https://quasa.io/storage/images/news/yUJWI6j3EVtTC2Y72ozNHuPNfL8nYxxQQq4V3eLS.jpg" class="img-fluid rounded shadow"  alt="Company Overview"  >
-      </div>
+  <!-- Hero Banner -->
+  <div class="hero-banner">
+    <div class="hero-content">
+      <h1>About Us</h1>
+      <p class="hero-subtitle">Empowering businesses with comprehensive B2B data solutions</p>
     </div>
-
-    <!-- Mission -->
-    <div class="mb-5">
-      <h3>MISSION</h3>
-      <p>We are driven by our client relationship. We promise to provide 10% or more quality 
-        data and the best client relationship that they have experienced before. We are a 
-        family inspired by our data, team work and helping customers succeed.</p>
-    </div>
-
-    <!-- Vision -->
-    <div class="mb-5">
-      <h3>VISION</h3>
-      <p>We envision ourselves as pioneers in data-driven innovation, delivering 
-        smart and scalable solutions that empower businesses worldwide.</p>
-    </div>
-
-    <!-- Make Data Facile -->
-    <div class="mb-5">
-      <h3>MAKE DATA FACILE AND EASY-TO-MANAGE</h3>
-      <p>Data-driven marketing is more than just introducing your products and services to the world. 
-        It’s all about leveraging data to do smart marketing, regardless of the media you are working on. 
-        The firms that are well grounded are those that have a firm grip on data-driven marketing. 
-        Thus, they are cognizant of their prospective clients and rivals.</p>
-    </div>
-
-    <!-- Take Control -->
-    <div class="mb-5">
-      <h3>TAKE CONTROL OF YOUR DATA</h3>
-      <p>Data Snap Solutions Inc., has within the company IT mavens who are erudite in data solutions, 
-        database management, and data-driven marketing. We let you structure your data and have a 
-        complete control of it. Our data experts can help you in growing your business through a gamut 
-        of services, including consultancy, data-driven marketing, and Outsourcing solutions. 
-        We are the trailblazers of business leveraging data intelligence.</p>
-    </div>
-
   </div>
 
+  <!-- Company Overview Section -->
+  <section class="section">
+    <div class="container">
+      <div class="overview-content animate-on-scroll">
+        <div class="overview-text">
+          <h3>COMPANY OVERVIEW</h3>
+          <p><strong>Make Informed Decisions through Reliable, High-quality, and Well-founded Data</strong></p>
+          <p>Data Snap Solutions Inc., Data solution provider, headquartered in Willington, Delaware.
+            We assist companies to achieve a profitable growth and being a backbone in providing
+            the world's most comprehensive B2B database.</p>
+          <p>We work with numerous clients from various businesses regardless of the size by offering
+            them comprehensive, next-generation data solutions, from start to finish, through
+            cutting-edge business models. In quest to take your data-driven approaches to a higher
+            level, we have created our newest business archetypes and innovative data solutions,
+            exclusively for B2B markets, tailor-made to your business necessities.</p>
+        </div>
+        <div class="overview-image">
+          <img src="https://quasa.io/storage/images/news/yUJWI6j3EVtTC2Y72ozNHuPNfL8nYxxQQq4V3eLS.jpg"
+            alt="Company Overview">
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Mission & Vision Section -->
+  <section class="section">
+    <div class="container">
+      <div class="mission-vision animate-on-scroll">
+        <div class="card">
+          <h3>MISSION</h3>
+          <p>We are driven by our client relationship. We promise to provide 10% or more quality
+            data and the best client relationship that they have experienced before. We are a
+            family inspired by our data, team work and helping customers succeed.</p>
+        </div>
+        <div class="card">
+          <h3>VISION</h3>
+          <p>We envision ourselves as pioneers in data-driven innovation, delivering
+            smart and scalable solutions that empower businesses worldwide.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Data Records Counter Section -->
+  <section class="section data-stats">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title" style="color: white;">Total Data Records</h2>
+      </div>
+      <div class="stats-grid">
+        <div class="stat-item animate-on-scroll">
+          <div class="stat-number" id="counter1">0</div>
+          <div class="stat-label">B2B Contact Lists</div>
+        </div>
+        <div class="stat-item animate-on-scroll">
+          <div class="stat-number" id="counter2">0</div>
+          <div class="stat-label">Technology Data</div>
+        </div>
+        <div class="stat-item animate-on-scroll">
+          <div class="stat-number" id="counter3">0</div>
+          <div class="stat-label">Industry Data</div>
+        </div>
+        <div class="stat-item animate-on-scroll">
+          <div class="stat-number" id="counter4">0</div>
+          <div class="stat-label">Professionals Data</div>
+        </div>
+        <div class="stat-item animate-on-scroll">
+          <div class="stat-number" id="counter5">0</div>
+          <div class="stat-label">Healthcare Data</div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- How Big We Are Section -->
+  <section class="section">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">How Big We Are & The Industries We Cover</h2>
+        <p style="font-size: 1.2rem; max-width: 800px; margin: 0 auto;">
+          At Datasnap Solutions Inc, we take pride in being a <strong>global leader in B2B data solutions</strong>,
+          helping businesses connect across every industry. With <strong>millions of verified business contacts</strong>
+          and a presence across <strong>USA, India, Australia, UK, Germany, and Singapore</strong>, we make it possible
+          for our clients to reach <strong>decision-makers in every sector</strong> of the economy.
+        </p>
+      </div>
 
-    <div id="footer"></div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Load Navbar dynamically
-        fetch('/pages/navbar.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('navbar').innerHTML = data;
-            });
+      <div class="industries-grid">
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🏥</span>Healthcare & Life Sciences</h4>
+          <p>We provide access to <strong>hospital administrators, doctors, medical device manufacturers, pharmaceutical
+              executives, and biotech innovators.</strong> Our healthcare data enables companies to connect with
+            decision-makers
+            who influence product adoption, procurement, and partnerships.</p>
+        </div>
 
-        // Load Footer dynamically
-        fetch('/pages/footer.html')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            });
-    </script>
-   
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🚗</span>Automobile & Transportation</h4>
+          <p>From <strong>automobile manufacturers and component suppliers to dealerships, logistics firms, and EV
+              innovators,</strong>
+            our database powers connections across the automotive supply chain.</p>
+        </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🏗</span>Construction & Real Estate</h4>
+          <p>We cover <strong>builders, contractors, architects, property developers, and real estate
+              investors,</strong> ensuring
+            suppliers and service providers can reach the right partners for large-scale projects.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🛢</span>Oil, Gas & Energy</h4>
+          <p>Our energy sector data includes <strong>oilfield services, refinery executives, renewable energy leaders,
+              solar &
+              wind power companies, and energy consultants,</strong> helping businesses tap into both traditional and
+            emerging
+            energy markets.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>⚙</span>Manufacturing & Industrial</h4>
+          <p>From <strong>heavy machinery and equipment producers to electronics, textiles, and consumer goods
+              manufacturing,</strong>
+            our industrial data connects suppliers with production leaders worldwide.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>✈</span>Aviation & Aerospace</h4>
+          <p>We provide access to <strong>airline executives, airport authorities, aircraft parts manufacturers, defense
+              contractors, and aerospace engineers,</strong> fueling collaborations in one of the world's most advanced
+            industries.
+          </p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🛒</span>Retail, E-commerce & FMCG</h4>
+          <p>Our retail coverage spans <strong>supermarkets, e-commerce giants, wholesalers, and consumer goods
+              companies,</strong>
+            ensuring brands can connect directly with purchase decision-makers.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>💻</span>Technology & IT Services</h4>
+          <p>We maintain data on <strong>CIOs, CTOs, software developers, IT service providers, cloud vendors, and
+              cybersecurity
+              experts,</strong> powering growth in the world's fastest-changing industry.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>💰</span>Banking, Finance & Insurance</h4>
+          <p>We cover <strong>banks, financial advisors, private equity firms, venture capitalists, insurance providers,
+              and
+              wealth managers,</strong> enabling B2B companies to access capital markets and partnerships.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🌱</span>Agriculture & Food Processing</h4>
+          <p>From <strong>farm owners and agritech companies to food manufacturers, packaging providers, and
+              distributors,</strong> we
+            bridge connections across the global food supply chain.</p>
+        </div>
+
+        <div class="industry-card animate-on-scroll">
+          <h4><span>🚚</span>Logistics & Supply Chain</h4>
+          <p>We include <strong>freight forwarders, shipping companies, warehouse operators, and supply chain
+              consultants,</strong>
+            helping businesses expand their reach globally.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Additional Content Section -->
+  <section class="section">
+    <div class="container">
+      <div class="content-cards">
+        <div class="card animate-on-scroll">
+          <h3>MAKE DATA FACILE AND EASY-TO-MANAGE</h3>
+          <p>Data-driven marketing is more than just introducing your products and services to the world.
+            It's all about leveraging data to do smart marketing, regardless of the media you are working on.
+            The firms that are well grounded are those that have a firm grip on data-driven marketing.
+            Thus, they are cognizant of their prospective clients and rivals.</p>
+        </div>
+
+        <div class="card animate-on-scroll">
+          <h3>TAKE CONTROL OF YOUR DATA</h3>
+          <p>Data Snap Solutions Inc., has within the company IT mavens who are erudite in data solutions,
+            database management, and data-driven marketing. We let you structure your data and have a
+            complete control of it. Our data experts can help you in growing your business through a gamut
+            of services, including consultancy, data-driven marketing, and Outsourcing solutions.
+            We are the trailblazers of business leveraging data intelligence.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div id="footer"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Load Navbar and Footer
+    fetch('/pages/navbar.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('navbar').innerHTML = data;
+      });
+
+    fetch('/pages/footer.html')
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById('footer').innerHTML = data;
+      });
+
+    // Counter Animation
+    function animateCounter(id, target, suffix = '') {
+      const element = document.getElementById(id);
+      const duration = 2000;
+      const steps = 60;
+      const increment = target / steps;
+      let current = 0;
+
+      const timer = setInterval(() => {
+        current += increment;
+        if (current >= target) {
+          current = target;
+          clearInterval(timer);
+        }
+
+        if (target >= 1000000) {
+          element.textContent = (current / 1000000).toFixed(0) + 'M+' + suffix;
+        } else if (target >= 1000) {
+          element.textContent = (current / 1000).toFixed(0) + 'K+' + suffix;
+        } else {
+          element.textContent = Math.floor(current) + suffix;
+        }
+      }, duration / steps);
+    }
+
+    // Scroll Animation Observer
+    const observerOptions = {
+      threshold: 0.1,
+      rootMargin: '0px 0px -50px 0px'
+    };
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+
+          // Trigger counter animations when stats section is visible
+          if (entry.target.querySelector('#counter1')) {
+            setTimeout(() => {
+              animateCounter('counter1', 500000000);
+              animateCounter('counter2', 106000000);
+              animateCounter('counter3', 45000000);
+              animateCounter('counter4', 75000000);
+              animateCounter('counter5', 15000000);
+            }, 300);
+          }
+        }
+      });
+    }, observerOptions);
+
+    // Observe all animated elements
+    document.querySelectorAll('.animate-on-scroll').forEach(el => {
+      observer.observe(el);
+    });
+  </script>
+</body>
+
 </html>
+<!-- <img src="https://quasa.io/storage/images/news/yUJWI6j3EVtTC2Y72ozNHuPNfL8nYxxQQq4V3eLS.jpg"
+  class="img-fluid rounded shadow" alt="Company Overview"> -->
