--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -27,7 +27,7 @@
       background-size: cover;
       background-position: center;
       position: relative;
-      height: 40vh;
+      height: 70vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -79,13 +79,13 @@
 
     .contact-icon {
       font-size: 1.8rem;
-      color: #0044ff;
+      color: #01024f;
       margin-right: 35px;
       flex-shrink: 0;
     }
 
     .contact-card h4 {
-      color: #0044ff;
+      color: #01024f;
     }
 
     .contact-text {
@@ -105,7 +105,7 @@
     .social-icons a {
       font-size: 1.5rem;
       margin: 0 20px;
-      color: #0044ff;
+      color: #01024f;
       transition: transform 0.3s ease, color 0.3s ease;
     }
 
@@ -162,7 +162,7 @@
               <label class="form-label">Message</label>
               <textarea class="form-control" rows="5" placeholder="Type your message..." required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Send Message</button>
+            <button type="submit" class="btn w-100" style="color: white; background-color: #01024f;">Send Message</button>
           </form>
         </div>
       </div>
