--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,138 +1,161 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Data Snap Solutions</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+  <title>Data Snap Solutions</title>
+  <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
+
   <style>
-    .list-unstyled a
-    {
+    .list-unstyled a {
       color: #fff;
       padding-bottom: 8px;
     }
-    .list-unstyled a:hover
-    {
+
+    .list-unstyled a:hover {
       text-decoration: none;
     }
-.footer-logo {
-  display: flex;
-  flex-direction: column;     /* stack logo rows vertically */
-  align-items: center;        /* center rows horizontally */
-  gap: 20px;                  /* space between rows */
-  text-align: center;
-}
 
-.footer-logo img {
-  width: 60px;                /* consistent size */
-  height: auto;               /* keep proportions */
-  object-fit: contain;        /* no stretching */
-  margin: 0 10px;             /* spacing between logos */
-  transition: transform 0.3s ease;
-}
+    .footer-logo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      text-align: center;
+    }
 
-.footer-logo img:hover {
-  transform: scale(1.1);      /* subtle zoom on hover */
-}
+    .footer-logo img {
+      width: 60px;
+      height: auto;
+      object-fit: contain;
+      margin: 0 10px;
+      transition: transform 0.3s ease;
+    }
 
-.logo-1,
-.logo-2 {
-  display: flex;
-  justify-content: center;    /* center logos in row */
-  align-items: center;
-  gap: 20px;                  /* space between each logo */
-}
-.secure
-{
-  height: 200px;
-}
+    .footer-logo img:hover {
+      transform: scale(1.1);
+    }
 
+    .logo-1,
+    .logo-2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .secure {
+      height: 200px;
+    }
   </style>
-  
-  </head>
-  <body>
+</head>
 
-    <footer class="text-white pt-5" style="background-color:#0a165a;">
-  <div class="ml-5 mr-5">
-    <div class="row">
+<body>
 
-      <!-- About Us -->
-      <div class="col-md-3 mb-4">
-        <h5 class="fw-bold mb-3">ABOUT US</h5>
-        <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
-        <p>
-          Data Snap Solutions Inc. US-based data solutions provider, headquartered in Willington, Delaware.
-        </p>
-        <p>
-          Working hand in hand with companies to achieve profitable growth and being a backbone in providing the world’s most comprehensive B2B database.
-        </p>
-      </div>
+  <footer class="text-white pt-5" style="background-color:#01024f;">
+    <div class="ml-5 mr-5">
+      <div class="row">
 
-      <!-- Company Links -->
-      <div class="col-md-3 mb-4">
-        <h5 class="fw-bold mb-3">COMPANY LINKS</h5>
-        <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
-        <ul class="list-unstyled d-flex">
-        <div class="">
-          <li><a href="/pages/b2b-data.html">» B2B Data</a></li>
-          <li><a href="/pages/key-design-data.html">» Key Decision Makers Data</a></li>
-          <li><a href="/pages/email-marketing.html">» Email Marketing Programs</a></li>
-          <li><a href="/pages/tech-data.html">» Technology Data</a></li>
-          <li><a href="/pages/healthcare.html">» Healthcare Data</a></li>
-          <li><a href="/pages/post-pre-event-data.html">» Post Event / Pre Event Database</a></li>
+        <!-- About Us -->
+        <div class="col-md-3 mb-4">
+          <h5 class="fw-bold mb-3">ABOUT US</h5>
+          <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
+          <p>
+            Data Snap Solutions Inc. US-based data solutions provider, headquartered in Willington, Delaware.
+          </p>
+          <p>
+            Working hand in hand with companies to achieve profitable growth and being a backbone in providing the
+            world’s most comprehensive B2B database.
+          </p>
         </div>
 
-        <div class="">
-          <li><a href="/pages/industry.html">» Industry Data</a></li>
-          <li><a href="/pages/data-append.html">» Data Append</a></li>
-          <li><a href="/pages/email-append.html">» Email Append</a></li>
+        <!-- Company Links -->
+        <div class="col-md-3 mb-4">
+          <h5 class="fw-bold mb-3">COMPANY LINKS</h5>
+          <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
+          <ul class="list-unstyled d-flex">
+            <div>
+              <li><a href="/pages/b2b-data.html">» B2B Data</a></li>
+              <li><a href="/pages/key-design-data.html">» Key Decision Makers Data</a></li>
+              <li><a href="/pages/email-marketing.html">» Email Marketing Programs</a></li>
+              <li><a href="/pages/tech-data.html">» Technology Data</a></li>
+              <li><a href="/pages/healthcare.html">» Healthcare Data</a></li>
+              <li><a href="/pages/post-pre-event-data.html">» Post Event / Pre Event Database</a></li>
+            </div>
+
+            <div>
+              <li><a href="/pages/industry.html">» Industry Data</a></li>
+              <li><a href="/pages/data-append.html">» Data Append</a></li>
+              <li><a href="/pages/email-append.html">» Email Append</a></li>
+            </div>
+          </ul>
         </div>
-        </ul>
-      </div>
 
-<div class="col-md-3 footer-logo text-center">
-  <div class="logo-1 mb-3">
-    <img src="../images/100.png" alt="100%" class="img-fluid" style="height:60px; width:auto; margin:5px;">
-    <img src="../images/95-Accuracy.png" alt="95%" class="img-fluid" style="height:60px; width:auto; margin:5px;">
-    <img src="../images/bbb+.webp" alt="BBB" class="img-fluid" style="height:60px; width:auto; margin:5px;">
-  </div>  
+        <!-- Logos -->
+        <div class="col-md-3 footer-logo text-center">
+          <div class="logo-1 mb-3">
+            <img src="../images/100.png" alt="100%" class="img-fluid" style="height:60px;">
+            <img src="../images/95-Accuracy.png" alt="95%" class="img-fluid" style="height:60px;">
+            <img src="../images/bbb+.webp" alt="BBB" class="img-fluid" style="height:60px;">
+          </div>
 
-  <div class="logo-2">
-    <img src="../images/GDPR.png" alt="GDPR" class="img-fluid" style="height:50px; width:auto; margin:5px;">
-    <img src="../images/secure-1.png" alt="Secure" class="img-fluid" style="height:80px; width:auto; margin:5px;"> 
-    <img src="../images/can-span.png" alt="CAN-SPAM" class="img-fluid" style="height:60px; width:50px; margin:5px;">
-  </div>
-</div>
+          <div class="logo-2">
+            <img src="../images/GDPR.png" alt="GDPR" class="img-fluid" style="height:50px;">
+            <img src="../images/secure-1.png" alt="Secure" class="img-fluid" style="height:80px;">
+            <img src="../images/can-span.png" alt="CAN-SPAM" class="img-fluid" style="height:60px; width:50px;">
+          </div>
+        </div>
 
-
-      <!-- Contact Info -->
-      <div class="col-md-3 mb-4">
-        <h5 class="fw-bold mb-3">CONTACT INFO</h5>
-        <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
-        <p><strong>Address:</strong> 3524 SILVERSIDE ROAD SUITE 35B<br>WILMINGTON, DELAWARE 19810-4929</p>
-        <p><strong>Phone:</strong> +1 302 538 9148</p>
-        <p><strong>Email:</strong> Info@datasnapsolutionsinc.com</p>
+        <!-- Contact Info -->
+        <div class="col-md-3 mb-4">
+          <h5 class="fw-bold mb-3">CONTACT INFO</h5>
+          <div class="mb-2" style="height:2px; width:40px; background:#2ecc71;"></div>
+          <p><strong>Address:</strong> 3524 SILVERSIDE ROAD SUITE 35B<br>WILMINGTON, DELAWARE 19810-4929</p>
+          <p><strong>Phone:</strong> +1 302 538 9148</p>
+          <p><strong>Email:</strong> Info@datasnapsolutionsinc.com</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Bottom Bar -->
-  <div class="text-center py-3 mt-3 border-top" style="border-color: rgba(255,255,255,0.2) !important;">
-    <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <p class="mb-0">© 2022 All Rights Reserved.</p>
-      <p class="mb-0"><a href="#" class="text-white text-decoration-none">Terms and Conditions</a> | <a href="#" class="text-white text-decoration-none">Privacy Policy</a></p>
+    <!-- Bottom Bar -->
+    <div class="text-center py-3 mt-3 border-top" style="border-color: rgba(255,255,255,0.2) !important;">
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <p class="mb-0">© <span id="year">2025</span> All Rights Reserved.</p>
+        <p><a href="/pages/FAQ.html" class="text-white text-decoration-none">FAQs</a></p>
+        <p class="mb-0"><a href="/pages/term-condition.html" class="text-white text-decoration-none">Terms and
+            Conditions</a> | <a href="/pages/privecy.html" class="text-white text-decoration-none">Privacy Policy</a>
+        </p>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <!-- JS -->
+  <script>
+    // Update copyright year dynamically
+    document.addEventListener("DOMContentLoaded", function () {
+      const yearSpan = document.getElementById("year");
+      if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+      }
+    });
+  </script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+</body>
 </html>
