--- a/pages/healthcare.html
+++ b/pages/healthcare.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Data Snap Solutions</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">  <meta charset="utf-8">
+  <title>Data Snap Solutions</title>
+  <link rel="icon" type="image/x-icon" href="/images/logo-icon.png">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
@@ -43,7 +44,7 @@
             required to forage for reliable, contactable data. They source data from various reliable platforms such as
             medical associations, healthcare news, newspapers & magazines, webinars, blogs, and product roll outs.</p>
         </div>
-        <div>
+        <div style="max-width: 45%;">
           <img src="https://datasnapsolutionsinc.com/assets/images/services/gas-industry.jpg" alt="Healthcare Image"
             class="img-fluid rounded">
         </div>
