update pages layout

--- a/pages/email-append.html
+++ b/pages/email-append.html
@@ -94,7 +94,7 @@
   <div class="container content-section">
     <div class="row align-items-center">
       <!-- Left Text -->
-      <div class="col-lg-7">
+      <div class="col-lg-7" style="text-align: justify;">
         <h4>Promote faster conversions and maximize ROI with email appending.</h4>
         <p>
           In today’s competitive market, marketers usually replenish their customers about their products & services
