--- a/pages/email-marketing.html
+++ b/pages/email-marketing.html
@@ -76,7 +76,7 @@
     <div class="container-fluid">
       <div class="row align-items-center">
         <!-- Text -->
-        <div class="col-lg-7">
+        <div class="col-lg-7" style="text-align: justify;">
           <h2>A Robust Email Marketing Strategy Ensures High Deliverability</h2>
           <p>
             Email marketing is one of the most cost-effective online marketing strategies for businesses, especially small & medium firms. According to Data & Marketing Association, with very little investment, email marketing brings an exponential ROI (Return on Investment) for businesses in the USA. The reason for this is email marketing is easy-to-manage, pliable, and allows you to directly contact your potential customers.
