--- a/pages/healthcare.html
+++ b/pages/healthcare.html
@@ -28,7 +28,7 @@
   <div class="container section-content">
     <div class="main-div">
       <div class="main-content">
-        <div class="top-text">
+        <div class="top-text" style="min-width: 50%;">
           <h3 class="text-uppercase font-weight-bold mb-3">Get Better Conversions in the Healthcare Industry</h3>
           <p>Healthcare data refers to any data that is pertinent to the healthcare industry. Inefficient contact data
             can
